--- a/style.css
+++ b/style.css
@@ -12,7 +12,35 @@ body {
     top: 0;
     z-index: 1000;
   }
-  
+
   body {
     padding-top: 60px;
   }
+
+  .accordion {
+    max-width: 0;
+    margin: 20px auto;
+  }
+
+  input[type="checkbox"] {
+    display: none;
+  }
+
+  label {
+    display: block;
+    background-color: #333;
+    color: #fff;
+    padding: 10px;
+    cursor: pointer;
+  }
+
+  .content {
+    display: none;
+    padding: 10px;
+    border-top: 1px solid #ccc;
+  }
+
+  input[type="checkbox"]:checked + label +.content {
+    display: block;
+  }
+  
