--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     font-family: 'Arial', sans-serif;
+    padding-top: 60px;
   }
   
   .sticky-header {
@@ -13,7 +14,26 @@ body {
     z-index: 1000;
   }
 
-  body {
-    padding-top: 60px;
+  .btn-group button {
+    background-color: #04aa6d;
+    border: 1px solid green;
+    color: white;
+    padding: 10px 24px;
+    cursor: pointer;
+    float: left;
+  }
+
+  .btn-group button:not(:last-child) {
+    border-right: none;
+  }
+
+  .btn-group:after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+  .btn-group button:hover {
+    background-color: #3e8e41;
   }
   
