--- a/style.css
+++ b/style.css
@@ -37,3 +37,11 @@ body {
     background-color: #3e8e41;
   }
   
+  #raiden {
+    background-image: "raiden.png";
+  }
+
+  #nahida {
+    background-image: "nahida.png";
+  }
+  
