--- a/style.css
+++ b/style.css
@@ -14,17 +14,19 @@ body {
     z-index: 1000;
   }
 
-  .btn-group button {
+  .btn-group a {
     background-color: #ffffff;
-    border: 1px solid rgb(255, 255, 255);
+    border: none;
     color: white;
     padding: 0px;
     cursor: pointer;
     float: left;
     font-size: 24px;
+    position: relative;
+    overflow: hidden;
   }
 
-  .btn-group button:not(:last-child) {
+  .btn-group a:not(:last-child) {
     border-right: none;
   }
 
@@ -34,7 +36,29 @@ body {
     display: table;
   }
 
-  .btn-group button:hover {
-    opacity: 0.7;
-    filter: alpha(opacity=70);
+  .btn-group a:hover {
+    background-color: #686868;
+  }
+
+  .btn-group a:hover .overlay-text {
+    opacity: 1;
+  }
+
+  .overlay-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    z-index: 2;
+  }
+
+  .transparent {
+    opacity: 1;
+    height: auto;
+    display: block;
+  }
+
+  .btn-group a:hover .transparent {
+    opacity: 0.3;
   }
