--- a/pexeso-style.css
+++ b/pexeso-style.css
@@ -11,3 +11,34 @@
     background-repeat: no-repeat;
 }
 
+.homepage-header {
+    font-family: 'Arial', sans-serif;
+    background-color: #063657;
+    color: #fff;
+    padding: 15px;
+    text-align: center;
+    top: 0;
+    z-index: 1000;
+  }
+
+#game-container {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 600px;
+    margin: 0 auto;
+}
+
+#reset-btn {
+    display: block;
+    padding: 15px;
+    color: #000000;
+    text-decoration: none;
+    background-color: rgb(141, 223, 184);
+    border: none;
+    cursor: pointer;
+}
+
+#reset-btn:hover {
+    background-color: #1c7251;
+    color: #fff;
+}
